Fix typo (image to images)

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -6,7 +6,7 @@ body{
 }
 
 .login-screen {
-	background-image: url("../image/books.jpeg");
+	background-image: url("../images/books.jpeg");
 	background-size: 100% auto;
 	background-repeat: no-repeat;
 	
