--- a/css/classes.css
+++ b/css/classes.css
@@ -20,10 +20,13 @@ body{
 
 .class-stats-container {
 	float:left;
+	
 	width: 300px;
 	height: 100px;
+	
+	line-height: 17px;
 	font-size: 17px;
-	padding-top: 7px;
+	padding-top: 12px;
 }
 
 .class-container {
@@ -31,8 +34,10 @@ body{
 	
 	border-radius: 36px 8px 36px 8px;
 	
-    margin: 0 auto 0px;
-    margin-top: 20px;
+    	margin: 0 auto 0px;
+   	margin-top: 20px;
+	margin-left: 10px;
+	margin-right: 10px;
 
 	box-shadow: 4px 4px 7px 0px #222222;
 	
@@ -77,7 +82,7 @@ body{
 	
 	justify-content: center;
 	
-	background-color: #1E805E;
+	background-color: #16966A;
 	color: white;
 	
 	font-size: 35px;
@@ -86,7 +91,7 @@ body{
 
 
 .btn-custom {
-	background: #222222 url(login.png) no-repeat;
+	background: #222222 url("../images/login.png") no-repeat;
 	background-size: 50px 50px;
 	background-position: center;
 	
@@ -100,11 +105,11 @@ body{
 }
 
 .btn-custom:hover {
-	background-color: #1C1C1C;	
+	background-color: #010101;	
 }
 
 .btn-custom:active {
-	background-color: #161616;
+	background-color: #010101;
 	box-shadow: none;
 	transform: translate3d(3px,3px,0px);
 }
@@ -118,13 +123,10 @@ footer {
 
 .btn-newClass span {
 	line-height: 14px;
-    font-size: 14px;
-    padding: 2px;
+    	font-size: 14px;
+    	padding: 2px;
 	
-    display: inline-block;
-    vertical-align: middle;
-    text-align: center;
-	
+    	vertical-align: middle;
 	
 	font-family: 'Roboto', sans-serif;
 	font-weight: 500;
@@ -135,13 +137,16 @@ footer {
 	background: #222222;
 	color: #FFFFFF;
 	
+	padding: 2px;
 	height: 30px;
 	width: 175px;
 	border: none;	
 }
 
 .btn-newClass:hover {
-	color: #1E805E;
+	color: #16966A;
+	background-color: #010101;
+	cursor: pointer;
 }
 
 
