--- a/css/class.css
+++ b/css/class.css
@@ -57,7 +57,7 @@
 .title-bar-buttons-container {
 	float:right;
 	padding-top: 20px;
-	width: 260px;	
+	padding-right: 40px;	
 }
 
 .home-container {
