--- a/css/class.css
+++ b/css/class.css
@@ -4,26 +4,28 @@
 
 /* TITLE BAR */
 .class-title-bar {
-	height: 100px;
-	padding-bottom: 20px;
 	
+	height: 75px;
 	box-shadow: 0px 2px 5px #222222;
 	
 	display: flex;
+	flex-direction: row;
+	align-content: center;
 	
 	background-color: #16966A;
 	color: white;
-	overflow: hidden;
 	font-family: 'Barlow', sans-serif;
 	font-weight: 500;
+	overflow: hidden;
 	
 }
 
 .class-title {
-	padding-left: 8px;
-	padding-right: 50px;
+	padding-left: 35px;
+	padding-right: 30px;
 	margin-top: 0px;
 	margin-bottom: 0px;
+	
 	
 	font-size: 45px;
 	text-shadow: 1.5px 1.5px 2px BLACK;
@@ -32,86 +34,23 @@
 .class-id {
 	padding-left: 10px;
 	padding-right: 50px;
-	padding-top: 0px;
-	margin-top: -10px;
-	
-	font-size: 25px;
-	text-shadow: 1.5px 1.5px 2px BLACK;
-}
-
-
-.class-title-bar img{
-	margin-bottom: 0px;
-	height: 70%;
-}
-
-.left-title-container{
-	height: 100px;
 	flex:1;
-	
-	text-overflow: ellipsis;
-	white-space: nowrap;
-	overflow: hidden;
+	line-height: 75px;
+	color: #D1D1D1;
+	font-size: 22px;
+	text-shadow: 1px 1px 2px BLACK;
 }
 
-.title-bar-buttons-container {
-	float:right;
-	padding-top: 20px;
-	padding-right: 40px;	
+.btn-container{
+	line-height: 75px;
+	margin-right: 50px;
 }
-
-.home-container {
-	float: left;
-	height: 100px;
-	width: 75px;
-}
-
-.btn-home {
-	cursor: pointer;
-	
-	height: 60px;
-	width: 60px;
-	
-	background-color: #222222;
-	border: none;
-	border-radius: 10px;
-	
-	box-shadow: 3px 3px 2px #080808; 
-	
-	background-image: url(../images/home.png);
-	background-size: 43px;
-	background-repeat: no-repeat;
-	background-position: center;
-	
-}
-
-.btn-home:hover {
-	background-image: url(../images/homeHover.png);
-	background-size: 43px;
-	background-repeat: no-repeat;
-	background-position: center;
-	
-	background-color: #010101;
-}
-
-.btn-home:active {
-	background-image: url(../images/homeHover.png);
-	background-size: 43px;
-	background-repeat: no-repeat;
-	background-position: center;
-	
-	background-color: #010101;
-	box-shadow: none;
-	transform: translate3d(3px,3px,0px);
-}
-
 
 .btn-utility {
 	cursor: pointer;
 	height: 25px;
 	width: 150px;
-	display: block;
-	margin-bottom: 10px;
+	margin-left:20px;
 	
 	background-color: #222222;
 	border: none;
@@ -135,45 +74,6 @@
 	color:#B9B9B9;
 	box-shadow: none;
 	transform: translate3d(3px,3px,0px);
-}
-
-
-
-/*BACK BUTTON*/
-
-.btn-back {
-	cursor: pointer;
-	height: 25px;
-	width: 175px;
-	margin-top: 10px;
-	margin-bottom: 2px;
-	margin-left: 7px;
-	
-	padding-left: 30px;
-	
-	background-color: #222222;
-	background-image: url(../images/back.png);
-	background-repeat: no-repeat;
-	background-position: 5% 50%;
-	background-size: 20px 20px;
-	
-	border: none;
-	border-radius: 0px;
-		
-	box-shadow: 3px 3px 2px #080808; 
-	
-	color: white;
-	font-size: 15px;
-	line-height: 25px;
-	font-family: 'Roboto', sans-serif;
-}
-
-.btn-back:hover {
-	
-}
-
-.btn-back:active {
-	
 }
 
 
