--- a/css/main.css
+++ b/css/main.css
@@ -108,5 +108,17 @@ body{
 	font-weight: 500;
 }
 
-
+.blank-entry {
+	flex:1;
+	
+	display: flex;
+	align-content: center;
+	justify-content: center;
+	
+	margin-top: 15px;
+	padding: 0px;
+	
+	font-size: 20px;
+	color: #A7A7A7;
+}
 
