--- a/css/main.css
+++ b/css/main.css
@@ -6,13 +6,13 @@ body{
 }
 
 .login-screen {
-	background-image: url("../images/books.jpeg");
+	background-image: url("../images/cover.png");
 	background-size: 100% auto;
 	background-repeat: no-repeat;
 	
 	min-width: 900px;
 	width: 100%;
-	height: 600px;
+	height: 800px;
 	
 	display: flex;
 	flex-direction: column;
