--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ body{
 	
 	min-width: 900px;
 	width: 100%;
-	height: 800px;
+	height: calc(100vh - 56px);
 	
 	display: flex;
 	flex-direction: column;
