--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,8 @@ body{
 
 .login-screen {
 	background-image: url("../images/cover.png");
-	background-size: 100% auto;
+	background-size: cover;
+    background-position: center;
 	background-repeat: no-repeat;
 	
 	min-width: 900px;
