Fixed background on X button

--- a/css/classes.css
+++ b/css/classes.css
@@ -167,7 +167,7 @@ footer {
 	background-image: url(../images/deleteClass.png);
 	background-repeat: no-repeat;
 	background-size: cover;
-	background-color: #F0F0F0;
+	background-color: #FFFFFF;
 }
 
 .btn-deleteClass:hover, .btn-deleteClass:active {
