--- a/css/class.css
+++ b/css/class.css
@@ -126,6 +126,12 @@
 	align-items: center;
 }
 
+.session-header h1{
+	font-size: 30px;
+	font-weight: 500;
+}
+
+
 .session {
 	font-size: 23px;
 	font-family: 'Roboto', sans-serif;
