--- a/css/class.css
+++ b/css/class.css
@@ -64,12 +64,12 @@
 	font-family: 'Roboto', sans-serif;
 }
 
-.btn-utility:hover, .btn-new-session:hover, .btn-session:hover {
+.btn-utility:hover, .btn-session:hover {
 	background-color: #010101;
 	color:#B9B9B9;
 }
 
-.btn-utility:active, .btn-new-session:active, .btn-session:active {
+.btn-utility:active, .btn-session:active {
 	background-color: #010101;
 	color:#B9B9B9;
 	box-shadow: none;
@@ -194,23 +194,26 @@
 
 
 .btn-new-session {
-	cursor: pointer;
 	height: 25px;
-	width: 175px;
-	margin-bottom: 2px;
+	width: 25px;
 	
-	margin-left: 20px;
+	cursor: pointer;
 	
-	background-color: #222222;
+	background-color: white;
 	border: none;
-	border-radius: 0px;
-		
-	box-shadow: 3px 3px 2px #080808; 
 	
-	color: white;
-	font-size: 15px;
-	line-height: 25px;
-	font-family: 'Roboto', sans-serif;
+	margin-top: 8px;
+	margin-left: 10px;
+	line-height: 30px;
+	
+	background-image: url(../images/plus.png);
+	background-size: contain;
+	background-position: center;
+	background-repeat: no-repeat;
+}
+
+.btn-new-session:hover, .btn-new-session:focus {
+	background-image: url(../images/plusHover.png);
 }
 
 
