--- a/css/class.css
+++ b/css/class.css
@@ -117,6 +117,7 @@
 .session-header {
 	width: 100%;
 	margin-left: 10%;
+	margin-bottom: 10px;
 	
 	font-size: 30px;
 	font-weight: 500;
@@ -129,8 +130,8 @@
 .session-header h1{
 	font-size: 30px;
 	font-weight: 500;
-	padding: 0;
-	margin: 0;
+	padding: 0px;
+	margin: 0px;
 }
 
 
