changed background color

--- a/css/index.css
+++ b/css/index.css
@@ -21,7 +21,7 @@
 	justify-content: center;
 
 	background-image: url(../images/cover.png);
-	background-color: #275A27;
+	background-color: #222222;
 	background-repeat: no-repeat;
 }
 
