changed font color on register button

--- a/css/index.css
+++ b/css/index.css
@@ -119,6 +119,7 @@
 
 .btn-outline-success:hover, .btn-outline-success:active, .btn-outline-success:focus {
 	background-color: #16966A;
+	color: white;
 }
 
 .btn-android {
