--- a/css/classes.css
+++ b/css/classes.css
@@ -15,7 +15,7 @@ body{
 	flex-direction: row;
 	flex-wrap: wrap;
 	justify-content: center;
-	margin-top: 20px;
+	padding-top: 20px;
 	
 	padding-bottom: 20px;
 	
